testimonial background fix. adjusted services spacing.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5350,8 +5350,8 @@ input, select, textarea {
 	-webkit-align-items: -webkit-stretch;
 	-ms-align-items: -ms-stretch;
 	align-items: stretch;
-	row-gap: 32px;
-	justify-content: space-between;
+	row-gap: 40px;
+	justify-content: space-around;
 }
 
 	.posts-grid > * {
